2021-05-04
+ MINOR
  - A previously unknown bit in the Leg metadata has now been correctly marked as 'LegShowTail' (Thanks Nyaughty)

+ BUGFIXES
  - Fixed Lumina mode causing issues with post-patch cleanup process.
  - Fixed Paintings not being importable.

2021-04-22
+ MINOR
  - The Check for Problems tool will now check for and correct texture files having an incorrect reported filesize.

+ BUGFIXES
  - Resolved in issue wherein the application would crash when selecting UI elements in the Advanced Modpack Creator
  - Resolved an issue wherein the application would crash when importing or exporting paintings.
  - Resolved an issue wherein the application would save texture mods with an incorrect reported file size (Thanks Perchbird!)
  - Resolved an issue wherein TTMP files were importable while in Lumina mode.
  - Resolved an issue whereing importing Racial Scaling mods via TTMP files was not applying the mods correctly.
  - Resolved an issue wherein TTMP1 files would fail to import with a JSON error.


2021-04-18
+ MINOR
  - Added the ability to switch to the high resolution version of textures under the UI category by checking the checkbox in the top right of the viewport. (Thanks goat!)

2021-04-16
+ MINOR
  - Lumina/Penumbra Integration features have been added to TexTools. ( See: https://docs.google.com/document/d/1VPfpMts8HBCxpaI7aV-n7EwhQQS2ODODHAzD8Ww8rVw/edit )
+ BUGFIXES
  - Mounts, Minions, and Weapons are now viewable/editable again via their standard category selection.
  
2021-04-13
+ MINOR
  - Offsets updated for FFXIV Patch 5.5 Global Version

2021-04-08
+ MINOR
  - Updated offsets for Chinese version.

2021-03-07
+ BUGFIXES
  - Resolved an issue wherein in the modlist menu would crash the application under certain conditions.
  - Resolved an issue wherein the Snowman Suit and other Body-Leg-Foot items displayed the incorrect item when selected.